--- a/other/tor-wpscan/Makefile
+++ b/other/tor-wpscan/Makefile
@@ -12,11 +12,11 @@ upd:
 
 .PHONY: run-u
 run-u:
-	@docker-compose run --rm wp-scan --proxy socks5://tor-proxy:9050 --url ${url} --enumerate u
+	@docker-compose run --rm wp-scan --proxy socks5h://tor-proxy:9050 --url ${url} --enumerate u
 
 .PHONY: run-p
 run-p:
-	@docker-compose run --rm wp-scan --proxy socks5://tor-proxy:9050 --url ${url} -U ${username} --passwords /passwordlists/passwords.lst
+	@docker-compose run --rm wp-scan --proxy socks5h://tor-proxy:9050 --url ${url} -U ${username} --passwords /passwordlists/passwords.lst
 
 .PHONY: down
 down:
