fix: docker volume path

--- a/other/tor-wpscan/Makefile
+++ b/other/tor-wpscan/Makefile
@@ -16,7 +16,7 @@ run-u:
 
 .PHONY: run-p
 run-p:
-	@docker-compose run --rm wp-scan --proxy socks5h://tor-proxy:9050 --url ${url} -U ${username} --passwords /passwordlists/passwords.lst
+	@docker-compose run -it --rm wp-scan --proxy socks5h://tor-proxy:9050 --url ${url} -U ${username} --passwords /passwordlists/passwords.lst
 
 .PHONY: down
 down:
