--- a/other/tor-wpscan/docker-compose.yml
+++ b/other/tor-wpscan/docker-compose.yml
@@ -11,4 +11,4 @@ services:
     container_name: wp-scan
     image: wpscanteam/wpscan
     volumes:
-      - ./passwords.lst:/passwordlists
+      - ./wpscan:/passwordlists
